# z2p-mailerr

./: Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230603170412_create_subscriptions_table.sql
scripts/: do_create_app.sh  do_update_app.sh  init_db.sh  innerCI.sh  sample_request.sh  test_with_logs.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: healh_check.rs  test_app.rs
