[package] 
name = "z2p-mailerr"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p-mailerr"


[dependencies]
actix-web = "4"
serde = { version = "1.0.163", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.18"
